--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "gh-pages": "^4.0.0",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
@@ -16,6 +17,8 @@
     "styled-components": "^5.3.6"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "WATCHPACK_POLLING=true react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -27,6 +30,7 @@
       "react-app/jest"
     ]
   },
+  "homepage": "https://ivansavdev.github.io/",
   "browserslist": {
     "production": [
       ">0.2%",
